--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
     <h3>Rooms with Small Populations of Computer Students</h3>
     <p>You can probably find a few computer students in some math, science or tech classes.</p>
   </div>
-  
+  <img src="wiki.jpeg">
 </body>
 
 </html>
